js/src/tests/test262/built-ins/Error/prototype/stack/setter-existing-own-property.js






























var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');
  Object.defineProperty(err, 'stack', {
    value: 'original',
    writable: true,
    enumerable: false,
    configurable: false,
  });

  set.call(err, 'updated');

  
  verifyProperty(err, 'stack', {
    value: 'updated',
    writable: true,
    enumerable: false,
    configurable: false,
  });
}

reportCompare(0, 0);
